feat: job与申请相关业务修改
